--- a/app/src/main/res/layout/analyze_quesiton_item.xml
+++ b/app/src/main/res/layout/analyze_quesiton_item.xml
@@ -13,7 +13,8 @@
         android:layout_marginStart="10dp"
         android:layout_marginLeft="15dp"
         android:text="Question"
-        android:textSize="20sp"
+        android:textColor="@color/purple_700"
+        android:textSize="14sp"
         android:textStyle="bold" />
 
 
@@ -23,8 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="10dp"
-        android:text="Language"
-        android:textSize="16sp"
+        android:text="Your Answer:"
+        android:textSize="12sp"
         android:textStyle="bold"
          />
 
@@ -34,7 +35,8 @@
         android:layout_width="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Exp : 3 years"
+        android:textColor="#035007"
+        android:textSize="12sp"
+        android:text="Correct Answer:"
          />
 </LinearLayout>
